# sheerscan

./: .gitignore  LICENSE  README.md  pyproject.toml
sheerscan/: __init__.py  cache.py  cli.py  corpus.py  crop_zoom.py  crop_zoom_worker.py  inspector.py  ollama.py  reason_filter.py  replay.py  runtime.py
sheerscan/web/: __init__.py
sheerscan/web/static/: corpus.html  inspect.html
tests/: test_inspector_regression.py
tests/inspector_corpus/: baseline.json
